--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <button class="mobile-menu-btn">☰</button>
             <div class="logo">VIPERR | 9mice</div>
             <nav class="knopki">
-                <a href="../ilumo/bio.html" class="nav">9|BIO</a>
+                <a href="bio.html" class="nav">9|BIO</a>
                 <a href="https://9mice.one/tour" class="nav">9|LIVE</a>
-                <a href="../ilumo/shop.html" class="nav">9|ARMOUR</a>
-                <a href="../ilumo/disk.html" class="nav">9|HM2</a>
+                <a href="shop.html" class="nav">9|ARMOUR</a>
+                <a href="disk.html" class="nav">9|HM2</a>
                 <a href="asphalt/" class="nav">9|ASPHALT</a>
             </nav>
         </div>
