--- a/shop.html
+++ b/shop.html
@@ -17,7 +17,7 @@
 
     <main class="product-page">
         <div class="product-frame">
-            <img src="images/product.jpg" alt="9MICE HEAVY METAL T-SHIRT" class="product-image" loading="lazy">
+            <img src="images/product.jpg" alt="9MICE HEAVY METAL T-SHIRT" class="product-image">
         </div>
         
         <div class="product-info">
