--- a/shop.html
+++ b/shop.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RR SHOP</title>
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/shop-style.css">
+    <link rel="stylesheet" href="/viperr/css/footer.css">
+    <link rel="stylesheet" href="/viperr/css/styles.css">
+    <link rel="stylesheet" href="/viperr/css/shop-style.css">
 </head>
 <body>
     <header class="header">
