--- a/mice.html
+++ b/mice.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VIPERR</title>
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/mice.css">
+    <link rel="stylesheet" href="/viperr/css/footer.css">
+    <link rel="stylesheet" href="/viperr/css/styles.css">
+    <link rel="stylesheet" href="/viperr/css/mice.css">
 </head>
 <body>
     <header>
@@ -14,14 +14,14 @@
         <div class="logo">VIPERR | 9MICE</div>
         <div class="music-link">
             <a href="https://music.yandex.ru/artist/13739916?utm_source=web&utm_medium=copy_link" target="_blank" class="yandex">
-                <img src="images/yam.png" alt="Яндекс Музыка" class="music-icon">
+                <img src="/viperr/images/yam.png" alt="Яндекс Музыка" class="music-icon">
             </a>
         </div>
     </header>
     
     <main class="main">
         <div class="artist-photo">
-            <img src="images/bio2.jpg" alt="9mice">
+            <img src="/viperr/images/bio2.jpg" alt="9mice">
         </div>
 
         <div class="content-area">
@@ -38,8 +38,8 @@
                     <video 
                     width="100%" 
                     controls 
-                    poster="images/qqqqqqq.png ">
-                        <source src="videos/1videoplayback.mp4" type="video/mp4">
+                    poster="/viperr/images/qqqqqqq.png ">
+                        <source src="/viperr/videos/1videoplayback.mp4" type="video/mp4">
                     </video>
                 </div>
         </div>
@@ -60,6 +60,6 @@
             <a href="https://music.apple.com/ru/artist/9mice/1593955534" target="_blank" class="social-link">Apple Music</a>
         </div>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="/viperr/js/script.js"></script>
 </body>
 </html>
