--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VIPERR</title>
     <link rel="icon" href="https://pngimg.com/uploads/spongebob/spongebob_PNG21.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/tracks.css">
+    <link rel="stylesheet" href="/viperr/css/footer.css">
+    <link rel="stylesheet" href="/viperr/css/style.css">
+    <link rel="stylesheet" href="/viperr/css/tracks.css">
 </head>
 <body>
     <header class="header">
@@ -26,11 +26,11 @@
 
     <main class="contentdiv">
         <div class="artistkai-photo">
-            <a href="kai.html"><img src="images/kai-angel.png" alt="Kai Angel" class="artistkai-image" data-audio="music/Kai Angel - Madam.mp3"></a>
+            <a href="kai.html"><img src="/viperr/images/kai-angel.png" alt="Kai Angel" class="artistkai-image" data-audio="music/Kai Angel - Madam.mp3"></a>
             <div class="artist-label-kai">KAI ANGEL</div>
         </div>
         <div class="artist-photo">
-            <a href="mice.html"><img src="images/micemain.png" alt="9mice" class="artist-image" data-audio="music/9mice - Narcotic.mp3"></a>
+            <a href="mice.html"><img src="/viperr/images/micemain.png" alt="9mice" class="artist-image" data-audio="music/9mice - Narcotic.mp3"></a>
         </div>
 
 
@@ -38,10 +38,10 @@
             <div class="release-section">
                     <h1 class="release-title">LAST <span class="pink"> RELEASE </span></h1>
                 <div class="release-artwork">
-                        <img src="images/lalala.jpeg" alt="9mice - New Album">
+                        <img src="/viperr/images/lalala.jpeg" alt="9mice - New Album">
                 </div>
                     <div class="player">
-                        <audio id="audio-player" src="music/anore.mp3"></audio>
+                        <audio id="audio-player" src="/viperr/music/anore.mp3"></audio>
                             <div class="track-info">
                                 <span class="track-name">9mice - Anora</span>
                                 <span class="current-time">0:00</span> / <span class="duration">0:00</span>
@@ -53,7 +53,7 @@
                                                 <div class="progress-bar" id="progress-bar"></div>
                                             </div>
                                  <button class="control-btn" id="mute-btn">
-                                    <img src="images/sound.png" alt="Volume">
+                                    <img src="/viperr/images/sound.png" alt="Volume">
                                 </button>
                                     </div>
                                 </div>
@@ -73,7 +73,7 @@
                         <div class="album-info">
                             <h3 style="margin-left: 800px; font-size: 80px; font-weight: 900; letter-spacing: 0.9em; color: aliceblue;">Narcotic</h3>
                         </div>
-                        <img src="images/try.jpg" alt="NARCOTIC" style="margin-left: 999px; width: 700px;height: 200px;">
+                        <img src="/viperr/images/try.jpg" alt="NARCOTIC" style="margin-left: 999px; width: 700px;height: 200px;">
                     </div>
         </section>
     </main>
@@ -83,7 +83,7 @@
         </div>
         <a href="https://t.me/derevo1337sol" target="_blank" class="social-link">telega avtorra</a>
         <div class="footer-center">
-            <img src="images/viperr.png" style="height: 40px;">
+            <img src="/viperr/images/viperr.png" style="height: 40px;">
         </div>
         <div class="footer-right">
             <a href="https://www.instagram.com/9mice?igsh=MTRsdmg2YnNuZnY4NQ==" target="_blank" class="social-link">Instagram</a>
@@ -92,10 +92,10 @@
             <a href="https://music.apple.com/ru/artist/9mice/1593955534" target="_blank" class="social-link">Apple Music</a>
         </div>
     </footer>
-    <div class="js/matrix-rain"></div>
-    <script src="js/tracks.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/player.js"></script>
-    <script src="js/matrix.js"></script>
+    <div class="/viperr/js/matrix-rain"></div>
+    <script src="/viperr/js/tracks.js"></script>
+    <script src="/viperr/js/main.js"></script>
+    <script src="/viperr/js/player.js"></script>
+    <script src="/viperr/js/matrix.js"></script>
 </body>
 </html>
