--- a/kai.html
+++ b/kai.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VIPERR</title>
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/kai.css">
+    <link rel="stylesheet" href="/viperr/css/footer.css">
+    <link rel="stylesheet" href="/viperr/css/styles.css">
+    <link rel="stylesheet" href="/viperr/css/kai.css">
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
         <div class="logo">VIPERR | KAI ANGEL</div>
         <div class="music-link">
             <a href="https://music.yandex.ru/artist/16509384?utm_source=web&utm_medium=copy_link" target="_blank" class="yandex">
-                <img src="images/yam.png" alt="Яндекс Музыка" class="music-icon">
+                <img src="/viperr/images/yam.png" alt="Яндекс Музыка" class="music-icon">
             </a>
         </div>
     </header>
@@ -38,9 +38,9 @@
                     <video 
                     width="100%" 
                     controls 
-                    poster="images/1200x630mv-3319639292.jpg"
+                    poster="/viperr/images/1200x630mv-3319639292.jpg"
                     >
-  <source src="videos/videoplayback.mp4" type="video/mp4">
+  <source src="/viperr/videos/videoplayback.mp4" type="video/mp4">
 </video>
                 </div>
                 </div>
@@ -59,7 +59,7 @@
             <a href="https://music.apple.com/ru/artist/9mice/1593955534" target="_blank" class="social-link">Apple Music</a>
         </div>
     </footer>
-    <script src="js/video.js"></script>
-    <script src="js/script.js"></script>
+    <script src="/viperr/js/video.js"></script>
+    <script src="/viperr/js/script.js"></script>
 </body>
 </html>
