--- a/shop.html
+++ b/shop.html
@@ -40,6 +40,6 @@
             <a href="https://music.apple.com/ru/artist/9mice/1593955534" target="_blank" class="social-link">Apple Music</a>
         </div>
     </footer>
-    <script src="js/shop-script.js"></script>
+    <script src="/viperr/js/shop-script.js"></script>
 </body>
 </html>
