--- a/disk.html
+++ b/disk.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#0a1128">
     <title>9MICE | HEAVY METAL VOL.2</title>
-    <link rel="stylesheet" href="/viperr/css/disk.css">
-    <link rel="stylesheet" href="/viperr/css/footer.css">
+    <link rel="stylesheet" href="css/disk.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
     <header class="main-header">
@@ -35,7 +35,7 @@
                         <h2 class="track-title">Cyber Is Dead Interlude.mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/CyberIsDeadInterlude.mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/CyberIsDeadInterlude.mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -48,7 +48,7 @@
                         <h2 class="track-title">Fountainebleu.mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/9mice, Kai Angel - Fountainebleu.mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/9mice, Kai Angel - Fountainebleu.mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -61,7 +61,7 @@
                         <h2 class="track-title">Phoenix.mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/9mice, Kai Angel - Phoenix.mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/9mice, Kai Angel - Phoenix.mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -74,7 +74,7 @@
                         <h2 class="track-title">Blum (Big City Life).mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/9mice, Kai Angel - Blum (Big City Life).mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/9mice, Kai Angel - Blum (Big City Life).mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -87,7 +87,7 @@
                         <h2 class="track-title">Ринопластика (Surgery).mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/9mice, Kai Angel - Ринопластика (Surgery).mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/9mice, Kai Angel - Ринопластика (Surgery).mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -100,7 +100,7 @@
                         <h2 class="track-title">Paparazzi.mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/9mice, Kai Angel - Paparazzi.mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/9mice, Kai Angel - Paparazzi.mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -113,7 +113,7 @@
                         <h2 class="track-title">So Good.mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/9mice, Kai Angel - So Good.mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/9mice, Kai Angel - So Good.mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -126,7 +126,7 @@
                         <h2 class="track-title">Frank Ocean.mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/9mice, Kai Angel - Frank Ocean.mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/9mice, Kai Angel - Frank Ocean.mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -139,7 +139,7 @@
                         <h2 class="track-title">2017.mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/9mice, Kai Angel - 2017.mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/9mice, Kai Angel - 2017.mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -152,7 +152,7 @@
                         <h2 class="track-title">Da Vinci.mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/9mice, Kai Angel - Da Vinci.mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/9mice, Kai Angel - Da Vinci.mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -165,7 +165,7 @@
                         <h2 class="track-title">LMFAO.mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/9mice, Kai Angel - LMFAO.mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/9mice, Kai Angel - LMFAO.mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -181,7 +181,7 @@
                         <h2 class="track-title">Ice + Alabaster.mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/9mice, Kai Angel - Ice + Alabaster.mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/9mice, Kai Angel - Ice + Alabaster.mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -194,7 +194,7 @@
                         <h2 class="track-title">Tusa V.I.P.mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/9mice, Kai Angel - Tusa V.I.P.mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/9mice, Kai Angel - Tusa V.I.P.mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -207,7 +207,7 @@
                         <h2 class="track-title">I Love God.mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/9mice, Kai Angel - I Love God.mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/9mice, Kai Angel - I Love God.mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -220,7 +220,7 @@
                         <h2 class="track-title">Smells Like Teen Spirit.mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/9mice, Kai Angel - Smells Like Teen Spirit.mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/9mice, Kai Angel - Smells Like Teen Spirit.mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -233,7 +233,7 @@
                         <h2 class="track-title">Hollywood Takeover….mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/9mice, Kai Angel - Hollywood Takeover….mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/9mice, Kai Angel - Hollywood Takeover….mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -246,7 +246,7 @@
                         <h2 class="track-title">I Wanna Be Your Dog.mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/9mice, Kai Angel - I Wanna Be Your Dog.mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/9mice, Kai Angel - I Wanna Be Your Dog.mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -259,7 +259,7 @@
                         <h2 class="track-title">Hate People.mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/9mice, Kai Angel - Hate People.mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/9mice, Kai Angel - Hate People.mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -272,7 +272,7 @@
                         <h2 class="track-title">Fire Alarm.mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/9mice, Kai Angel - Fire Alarm.mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/9mice, Kai Angel - Fire Alarm.mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -285,7 +285,7 @@
                         <h2 class="track-title">Murder On The Dancefloor.mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/9mice, Kai Angel - Murder On The Dancefloor.mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/9mice, Kai Angel - Murder On The Dancefloor.mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -298,7 +298,7 @@
                         <h2 class="track-title">Homecoming.mp3</h2>
                     </div>
                     <div class="track-controls">
-                        <audio class="audio-element" src="/viperr/music/HM2/9mice, Kai Angel - Homecoming.mp3"></audio>
+                        <audio class="audio-element" src="../ilumo/music/HM2/9mice, Kai Angel - Homecoming.mp3"></audio>
                         <button class="play-btn">▶</button>
                         <input type="range" class="progress-bar" value="0" min="0" max="100">
                     </div>
@@ -321,7 +321,7 @@
             <p>nikakue rights ne reserved syka © 2025</p>
         </div>
         <div class="footer-center">
-            <img src="/viperr/images/viperr.png" style="height: 40px;">
+            <img src="images/viperr.png" style="height: 40px;">
         </div>
         <div class="footer-right">
             <a href="https://www.instagram.com/9mice?igsh=MTRsdmg2YnNuZnY4NQ==" target="_blank" class="social-link">Instagram</a>
@@ -330,6 +330,6 @@
             <a href="https://music.apple.com/ru/artist/9mice/1593955534" target="_blank" class="social-link">Apple Music</a>
         </div>
     </footer>
-    <script src="/viperr/js/disk.js"></script>
+    <script src="js/disk.js"></script>
 </body>
 </html>
