--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <a href="https://music.apple.com/ru/artist/9mice/1593955534" target="_blank" class="social-link">Apple Music</a>
         </div>
     </footer>
-    <div class="/viperr/js/matrix-rain"></div>
+    <div class="/viperr/js/matrix.js"></div>
     <script src="/viperr/js/tracks.js"></script>
     <script src="/viperr/js/main.js"></script>
     <script src="/viperr/js/player.js"></script>
