--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="https://9mice.one/tour" class="nav">9|LIVE</a>
                 <a href="shop.html" class="nav">9|ARMOUR</a>
                 <a href="disk.html" class="nav">9|HM2</a>
-                <a href="asphalt/" class="nav">9|ASPHALT</a>
+                <a href="asphalt.html" class="nav">9|ASPHALT</a>
             </nav>
         </div>
     </header>
